static/ikwen/css/base.css
/**
    Document   : base
    Created on : August 04, 2016, 13:40
    Author     : Kom Sihon
    Description:
        Additional basic display rules for Ikwen apps
*/

@import url('https://fonts.googleapis.com/css?family=Lato:300|PT+Sans:400,700');

body {color: #464646;}
.working {cursor: wait}
.success {background: #B6F1B6; border: 1px solid; border-radius: 3px; color: #039B03}
.msg-tag.info {background: #dde9f1;border: 1px solid;border-radius: 3px;color: #1d2e9b}
.failure, .floating-notice.error, .msg-tag.error {background: #FFB6C1; border: 1px solid; border-radius: 3px; color:  #F00}
.clear {clear: both}
.text-muted {color: #888}
.help {color: #888; font-size: 14px}
.arrow {color: #bbb; margin: auto; width: 40px}
.arrow div {float: left; height: 20px; width: 20px}
.arrow.up div:first-child {border-right: 1px solid; transform: skewX(-30deg); transform-origin: 10px 0 0}
.arrow.up div:last-child {border-left: 1px solid; margin-left: -1px; transform: skewX(30deg); transform-origin: 10px 0 0}
.tpl, .hide {display: none}
.actions .glyphicon, .glyphicon.action, .actions .fa, .fa.action, .actions .fas, .fas.action {
    /* border: 1px solid #ddd; */
    border-radius: 3px;
    color: #888;
    cursor: pointer;
    margin-left: 6px;
    text-decoration: none;
}
#network-manager {height: 0; width: 0;position: fixed}
.actions .fa, .fa.action, .actions .fas, .fas.action {font-size: 18px}
.modal .actions {clear: both}
.cta {font-family: "PT Sans", Lato, sans-serif;font-weight: 700;letter-spacing: 0.5px;}
.stretched {height: 100%; width: 100%}
.errorlist {color: #e74c3c}
.input-error {border-color: #e74c3c}
#content .errorlist.username, #content .errorlist.phone {padding-left: 18px}
#content .errorlist.username li, #content .errorlist.phone li {list-style-type: disc}

.event {list-style-type: none; margin-bottom: 30px; padding: 0 !important;}
.event .btn {min-width: 120px;}
.event-content {padding: 15px;margin-left: 90px;border-left: 1px solid #ddd;}
.event-content p {margin-top: 10px;}
.event-content .actions {margin-top: 18px;}
.event-detail {background: #fff;border: 1px solid #ddd;margin-top: 10px;}
.event-icon {line-height: 140px; text-align: center;position: absolute;width: 90px;}
.event-icon img {width: 60px;}

.payment-method {display: block;cursor: pointer;margin-bottom: 1em;}
.payment-method .logo {display: block; text-align: center}
.om-instructions {display: none; margin-top: 10px;}
.modal-backdrop {background: #fff}
.modal-backdrop.in {opacity: .7; filter: Alpha(opacity=70)}

.spinner-container {-webkit-animation: rotate 2s linear infinite; animation: rotate 2s linear infinite; z-index: 2}
.spinner-container .path {
  stroke-dasharray: 1,150;
  stroke-dashoffset: 0;
  stroke: rgba(69, 151, 255, 0.85);
  stroke-linecap: round;
  -webkit-animation: dash 1.5s ease-in-out infinite;
  animation: dash 1.5s ease-in-out infinite;
}

.btn .spinner-container .path {stroke: rgba(162, 162, 162, 0.85);}
.btn.processing, .btn.processing:hover, .btn.processing:hover:active {background: #ddd;border-color: #9e9e9e;color: #777777;min-width: 170px;position: relative;transition: all .3s;}
.btn:not(.processing) .spinner {display: none; transition: all .3s}
.btn.processing .spinner {background: none;display: block;height: auto;left: auto;padding-top: 0;position: absolute;top: 4px;width: auto;}
@keyframes rotate {
    100% { transform: rotate(360deg); }
}
@-webkit-keyframes rotate {
    100% { -webkit-transform: rotate(360deg); }
}
@keyframes dash {
    0% {stroke-dasharray: 1,150; stroke-dashoffset: 0}
    50% {stroke-dasharray: 90,150; stroke-dashoffset: -35}
    100% {stroke-dasharray: 90,150; stroke-dashoffset: -124}
}
@-webkit-keyframes dash {
    0% {stroke-dasharray: 1, 150; stroke-dashoffset: 0}
    50% {stroke-dasharray: 90, 150; stroke-dashoffset: -35}
    100% {stroke-dasharray: 90, 150; stroke-dashoffset: -124}
}
.pulse {animation: pulse 1s infinite; background: none; border-radius: 50%; box-shadow: 0 0 0 rgba(0,110,228, 0.4);
    cursor: pointer; display: block; height: 1px; margin: -27px 11px 0 -11px; position: absolute; width: 1px}
@-webkit-keyframes pulse {
  0% {-webkit-box-shadow: 0 0 0 0 rgba(0,110,228, 0.4)}
  70% {-webkit-box-shadow: 0 0 0 20px rgba(0,110,228, 0)}
  100% {-webkit-box-shadow: 0 0 0 0 rgba(0,110,228, 0)}
}
@keyframes pulse {
  0% {-moz-box-shadow: 0 0 0 0 rgba(0,110,228, 0.4); box-shadow: 0 0 0 0 rgba(0,110,228, 0.4)}
  70% {-moz-box-shadow: 0 0 0 20px rgba(0,110,228, 0); box-shadow: 0 0 0 20px rgba(0,110,228, 0)}
  100% {-moz-box-shadow: 0 0 0 0 rgba(0,110,228, 0); box-shadow: 0 0 0 0 rgba(0,110,228, 0)}
}

#top-notice-ctnr {left: 0;position: fixed;text-align: center;top: 66px;width: 100%;z-index: 10000;}
.floating-notice {background: #F6FF8C; border: 1px solid #CDD570; border-radius: 2px; color: #484B2B; padding: 9px 24px; position: absolute}
.floating-notice.failure {border: 1px solid; color:  #F00}
.floating-notice .action {cursor: pointer; text-decoration: underline}
.status-bullet {border-radius: 50%;display: block;height: 15px;width: 15px;float: left;margin: 2px 10px 0 0;}
.status-bullet.warning, .status-bullet.pending {background: #FF9800;}
.status-bullet.primary {background: #3498db}
.status-bullet.success {background: #2ab732}
.status-bullet.danger, .status-bullet.canceled, .status-bullet.rejected {background: #ee4032}
.color-pending {color: #FF9800}
.color-expired, .color-rejected, .color-danger {color: #ee4032}
.color-active, .color-confirmed, .color-success {color: #2ab732}

#modal-generic-notice .modal-header {border-bottom: none}
#modal-generic-notice .illustration img {margin: auto}
#modal-generic-notice .illustration.cover {background: no-repeat center; background-size: cover; border-top-left-radius: 5px;
    border-top-right-radius: 5px; height: 270px; margin: -15px -15px}
#modal-generic-notice .success {background: no-repeat center url(../img/green-tick.gif);background-size: cover;height: 270px;border: none;margin: -15px;}
/* ... */

